service.yaml
apiVersion: v1
kind: Service
metadata:
  name: draco1-service
  labels:
    name: draco1
spec:
  type: NodePort
  ports:
    - port: 6161
      nodePort: 30017
      name: http
  selector:
    name: draco1
