ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: draco-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: old.draco.com
    http:
      paths:
      - path: /
        backend:
          serviceName: old-draco-service
          servicePort: 6464
